Fix text issue for child tag name that is really long, using nowrap to prevent new line

--- a/less/forum/DiscussionList.less
+++ b/less/forum/DiscussionList.less
@@ -22,6 +22,10 @@
     width: 100%;
     border-top: solid 1px;
     line-height: 34px;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
   }
   .DiscussionListItem-stats, .DiscussionListItem-count {
     color: white !important;
@@ -33,8 +37,7 @@
       font-weight: bold;
       position: absolute;
       bottom: 8px;
-      width: 100%;
-      text-align: center;
+      white-space: nowrap;
     }
     .item-excerpt, .item-terminalPost {
       font-size: 12px;
@@ -498,7 +501,6 @@
     display: none !important;
   }
   .item-tag {
-    width: 100%;
     border-top: none;
   }
 }
